<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EventCreateActivity"
    tools:showIn="@layout/activity_event_create">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/img_event"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/event_photo_tag"
            android:src="@drawable/event_default" />

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_event">

            <Button
                android:id="@+id/btn_clearPhoto"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@color/colorPrimary"
                android:paddingHorizontal="8dp"
                android:text="@string/prompt_clear_photo"
                android:textColor="@color/colorLight" />

            <Button
                android:id="@+id/btn_editPhoto"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@color/colorAccent"
                android:paddingHorizontal="8dp"
                android:text="@string/prompt_edit_photo"
                android:textColor="@color/colorLight" />

        </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_eventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etxt_eventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_hint_title"
            android:inputType="textAutoCorrect"
            android:textColor="@color/colorPrimaryDark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_eventDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etxt_eventDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_hint_datetime"
            android:inputType="datetime"
            android:textColor="@color/colorPrimaryDark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_eventLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etxt_eventLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_hint_loc"
            android:inputType="textAutoCorrect"
            android:textColor="@color/colorPrimaryDark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_eventDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etxt_eventDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_hint_desc"
            android:inputType="textImeMultiLine"
            android:textColor="@color/colorPrimaryDark" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Am I attending?"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

    <RelativeLayout
        android:id="@+id/event_attnd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/txt_event_not_attending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/swch_event_attending"
            android:text="@string/event_not_attending"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold" />

        <Switch
            android:id="@+id/swch_event_attending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:paddingHorizontal="10dp" />

        <TextView
            android:id="@+id/txt_event_attending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/swch_event_attending"
            android:text="@string/event_attending"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold"
            android:visibility="invisible" />

    </RelativeLayout>


    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:text="@string/event_create_invite"
        android:textColor="@color/colorLight" />

</LinearLayout>